// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comphub - Main - Card Layout should disable next button, when told to 1`] = `
<pf-card-layout
  hideNextButton="false"
  modalContent={[Function TemplateRef_]}
  modalService={[Function Object]}
  nextButtonEnabled="false"
  pageIconClass=""
  pageSubTitle=""
  pageTitle=""
  store={[Function Store]}
  window={[Function Object]}
>
  <div
    class="comphub-page"
  >
    <div
      class="page-header"
    >
      <i
        aria-hidden="true"
        class="fa  page-icon"
      />
      <span
        class="page-title"
      >
        
      </span>
    </div>
    <div>
      
    </div>
    <div
      class="actions-section"
    >
      
      <button
        class="btn comphub-secondary-btn"
        data-qa-id="btn-back"
      >
         Back 
      </button>
      
      <button
        class="btn comphub-primary-btn"
        data-qa-id="btn-next"
        disabled=""
      >
         Next 
      </button>
      <button
        class="btn comphub-secondary-btn close-app-btn"
        data-qa-id="btn-close"
      >
         Close 
      </button>
    </div>
  </div>
</pf-card-layout>
`;

exports[`Comphub - Main - Card Layout should hide the back button, when told to 1`] = `
<pf-card-layout
  hideBackButton={[Function Boolean]}
  modalContent={[Function TemplateRef_]}
  modalService={[Function Object]}
  pageIconClass=""
  pageSubTitle=""
  pageTitle=""
  store={[Function Store]}
  window={[Function Object]}
>
  <div
    class="comphub-page"
  >
    <div
      class="page-header"
    >
      <i
        aria-hidden="true"
        class="fa  page-icon"
      />
      <span
        class="page-title"
      >
        
      </span>
    </div>
    <div>
      
    </div>
    <div
      class="actions-section"
    >
      
      
      <button
        class="btn comphub-primary-btn"
        data-qa-id="btn-next"
        disabled=""
      >
         Next 
      </button>
      <button
        class="btn comphub-secondary-btn close-app-btn"
        data-qa-id="btn-close"
      >
         Close 
      </button>
    </div>
  </div>
</pf-card-layout>
`;

exports[`Comphub - Main - Card Layout should hide the next button, when told to 1`] = `
<pf-card-layout
  hideNextButton={[Function Boolean]}
  modalContent={[Function TemplateRef_]}
  modalService={[Function Object]}
  pageIconClass=""
  pageSubTitle=""
  pageTitle=""
  store={[Function Store]}
  window={[Function Object]}
>
  <div
    class="comphub-page"
  >
    <div
      class="page-header"
    >
      <i
        aria-hidden="true"
        class="fa  page-icon"
      />
      <span
        class="page-title"
      >
        
      </span>
    </div>
    <div>
      
    </div>
    <div
      class="actions-section"
    >
      
      <button
        class="btn comphub-secondary-btn"
        data-qa-id="btn-back"
      >
         Back 
      </button>
      
      <button
        class="btn comphub-secondary-btn close-app-btn"
        data-qa-id="btn-close"
      >
         Close 
      </button>
    </div>
  </div>
</pf-card-layout>
`;
